--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Sloppy is a free chess engine
-Copyright (C) 2007 - 2008 Ilari Pihlajisto (ilari.pihlajisto@mbnet.fi)
+Copyright (C) 2007 - 2009 Ilari Pihlajisto (ilari.pihlajisto@mbnet.fi)
 
 
 LICENSE AND WARRANTY
@@ -21,9 +21,9 @@ LICENSE AND WARRANTY
 COMPILING
 
    In UNIX/Linux systems just type "make" to compile Sloppy. There is no
-   "make install" though, so if you want to install Sloppy to an other folder
-   you'll need to copy the executable and the opening book (if any) to said
-   folder.
+   "make install" though, so if you want to install Sloppy to an other
+   directory you'll need to copy the executable and the opening book (if any)
+   to said directory.
   
    The Windows version compiles at least with Mingw and Microsoft's Visual C++
    compiler. Makefiles for both are included (Makefile.mgw and Makefile.win).
@@ -36,32 +36,39 @@ INTERFACE, COMMAND LINE OPTIONS
    it only supports UCI, you can still use Sloppy with the wb2uci adapter:
    http://home.online.no/~malin/sjakk/Wb2Uci/
 
+   Sloppy doesn't accept any command line options, see configuration below.
+
 
 CONFIGURATION
 
-   Sloppy ignores all command line arguments. Instead, you can configure Sloppy
-   by editing the config file ("sloppy.conf").
+   Sloppy is configured by editing the configuration file ("sloppy.conf").
+
+   On Windows systems the configuration file should be placed to the same
+   directory where the executable is.
+
+   On non-Windows systems the configuration file should be placed to
+   $HOME/.config/sloppy/ directory.
 
 
 ASCII INTERFACE COMMANDS
 
    In addition to all Xboard input, Sloppy accepts these commands:
 
-   bench		runs Sloppy's own benchmark
-   debug		toggles debugging mode
-   divide [d]		perft to depth [d], prints a node count for every move
-   help			shows this list
-   perft [d]		runs the perft test to depth [d]
-   printboard		prints an ASCII chess board and the FEN string
-   printeval		prints the static evaluation
-   printkey		prints the hash key
-   printmat		prints the material each player has on the board
-   printmoves		prints a list of legal moves
-   quit			quits the program
-   readpgn [f]		imports pgn file [f] to the book
-   readpgnlist [f]	imports a list of pgn files (in file [f]) to the book
-   testpos [sec] [fen]	runs a test position (eg. WAC, WCSAC)
-   testsee [fen] [move]	tests the Static Exchange Evaluator
-   testsuite [sec] [f]	runs a list of test positions (in file [f])
-   xboard		switches to Xboard/Winboard mode
+   bench                 runs Sloppy's own benchmark
+   debug                 toggles debugging mode
+   divide [d]            perft to depth [d], prints a node count for every move
+   help                  shows this list
+   perft [d]             runs the perft test to depth [d]
+   printboard            prints an ASCII chess board and the FEN string
+   printeval             prints the static evaluation
+   printkey              prints the hash key
+   printmat              prints the material each player has on the board
+   printmoves            prints a list of legal moves
+   quit                  quits the program
+   readpgn [f]           imports pgn file [f] to the book
+   readpgnlist [f]       imports a list of pgn files (in file [f]) to the book
+   testpos [sec] [fen]   runs a test position (eg. WAC, WCSAC)
+   testsee [fen] [move]  tests the Static Exchange Evaluator
+   testsuite [sec] [f]   runs a list of test positions (in file [f])
+   xboard                switches to Xboard/Winboard mode
 
