--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Version 0.2.3 (??/??/????):
+    - Rewrite the manual pages using mdoc documentation language. The manual
+      pages can be now viewed with the standard `man' utility without
+      pre-processing.
+    - Fixed a bug where EOF at the game prompt would cause infinite loop
+      on certain operating systems
+    - Fixed a build error on operating systems that have fully
+      deprecated the use of certain legacy time functions
+    - Minor fixes to increase portability to different operating systems
+
 Version 0.2.2 (07/09/2009):
     - Use the XDG Base Directory Specification for configuration and
       data file locations
